<resources>
    <string name="app_name">इ-Parchi</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="records">Records</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="your_info">Your Info</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>