<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >
    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/drawer_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/settings"/>
        </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/share"
            android:title="@string/share"
            android:icon="@drawable/share"/>
        <item
            android:id="@+id/rate_us"
            android:title="@string/rate_us"
            android:icon="@drawable/rate_us"/>
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/about"/>
    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        android:icon="@drawable/log_out"/>
    </group>
</menu>